<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Donating">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="0.1"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:fontFamily="@font/fredoka_one"
            android:textSize="14pt"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/donatingHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donatingHeader"
        android:fontFamily="@font/fredoka_one"
        android:textSize="12pt"
        android:textColor="@color/mainColor"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/donatingHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donatingHeader2"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/amethysta"
        android:textSize="9pt"
        android:text="@string/nameOfDonater" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nameOfDonater"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/amethysta"
        android:textSize="9pt"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editaAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hintAdrress"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/amethysta"
        android:textSize="9pt"
        android:text="@string/phone"/>

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/hintPhone"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/amethysta"
        android:textSize="9pt"
        android:text="@string/quantityBooks"/>

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hintQuantity"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/additionalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/amethysta"
        android:textSize="9pt"
        android:text="@string/additional"/>

    <EditText
        android:id="@+id/editAditional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:ems="10"
        android:hint="@string/hintAdditional"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/mainColor"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="end"/>

</LinearLayout>