<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Genre">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp">

        <ImageButton
            android:id="@+id/arrow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/arrow_button"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="100"
            android:max="100"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:progressDrawable="@drawable/progress_line" />
    </LinearLayout>

    <TextView
        android:id="@+id/genreHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genreHeading"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fredoka_one"
        android:textSize="9pt"/>

    <TextView
        android:id="@+id/genreHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genreHeading2"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/expletus_sans"
        android:layout_marginTop="10pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre1"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre2"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre3"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre4"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre5"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre6"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre7"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre8"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre9"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre10"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre11"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre12"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre13"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre14"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/genreButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre15"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />
    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/mainColor"
        android:layout_marginHorizontal="20dp"/>


</LinearLayout>

