<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Age">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/arrow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/arrow_button" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="50"
            android:max="100"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:progressDrawable="@drawable/progress_line"/>

    </LinearLayout>

    <TextView
        android:id="@+id/ageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ageHeader"
        android:fontFamily="@font/fredoka_one"
        android:textSize="10pt"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/ageText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/expletus_sans"
        android:text="@string/ageHeader2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_stroke"
            android:textColor="@color/mainColor"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age2"
            android:layout_marginEnd="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age3"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age4"
            android:layout_marginEnd="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age5"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age6"
            android:layout_marginEnd="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age7"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age8"
            android:layout_marginEnd="10dp"
            android:textColor="@color/mainColor"
            android:background="@drawable/button_stroke"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="50dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/next" />

</LinearLayout>