<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".welcome2">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:scaleType="fitStart"
        android:src="@drawable/bookshelf2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcomeText1"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/fredoka_one"
            android:textSize="10pt"
            />

        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text= "@string/name"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/fredoka_one"
            android:textSize="10pt"
            android:textColor="@color/mainColor"/>

    </LinearLayout>

    <TextView
        android:id="@+id/additionalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/expletus_sans"
        android:gravity="center"
        android:text="@string/appDescription" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getStarted"
        android:backgroundTint="@color/mainColor"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="180dp"/>

</LinearLayout>